--- a/client/package.json
+++ b/client/package.json
@@ -3,40 +3,34 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "@fortawesome/fontawesome-svg-core": "^1.2.36",
-        "@fortawesome/free-solid-svg-icons": "^5.15.4",
-        "@fortawesome/react-fontawesome": "^0.1.15",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^5.3.0",
-        "react-scripts": "4.0.3",
-        "socket.io-client": "^4.3.2",
-        "styled-components": "^5.3.1",
-        "web-vitals": "^1.1.2",
-        "axios": "^0.23.0",
-        "bootstrap": "^5.1.3",
-        "react-redux": "^7.2.5",
-        "react-toastify": "^8.0.3",
-        "reactstrap": "^8.10.0",
-        "redux": "^4.1.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
+        "@material-ui/core": "^4.11.3",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.0.1",
+        "coverage": "^0.4.1",
+        "cra-template": "1.1.2",
+        "dotenv": "^8.2.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.3",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.2",
+        "react-toastify": "^7.0.4",
+        "reactstrap": "^8.9.0",
+        "redux": "^4.0.5",
+        "redux-mock-store": "^1.5.4",
         "redux-thunk": "^2.3.0",
-        "socket.io-mock": "^1.3.2"
+        "serve": "^12.0.1",
+        "socket.io-client": "^3.1.2",
+        "start": "^5.1.0",
+        "styled-components": "^5.2.1"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
         "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
     },
     "browserslist": {
         "production": [
