--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,34 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "short_name": "Red Tetris",
+    "name": "MultiPlayer Game",
+    "icons": [{
+            "src": "tetris-logo.png",
+            "type": "image/png",
+            "sizes": "16x16"
+        },
+        {
+            "src": "tetris-logo.png",
+            "type": "image/png",
+            "sizes": "24x24"
+        },
+        {
+            "src": "tetris-logo.png",
+            "type": "image/png",
+            "sizes": "32x32"
+        },
+        {
+            "src": "tetris-logo.png",
+            "type": "image/png",
+            "sizes": "64x64"
+        },
+        {
+            "src": "tetris-logo.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        }
+    ],
+    "start_url": ".",
+    "display": "standalone",
+    "theme_color": "#000",
+    "background_color": "#fff"
 }
