--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
         "@material-ui/core": "^4.11.3",
+        "@testing-library/react": "^12.1.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
         "coverage": "^0.4.1",
@@ -16,13 +17,13 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.2",
+        "react-scripts": "^4.0.3",
         "react-toastify": "^7.0.4",
         "reactstrap": "^8.9.0",
         "redux": "^4.0.5",
         "redux-mock-store": "^1.5.4",
         "redux-thunk": "^2.3.0",
-        "serve": "^12.0.1",
+        "serve": "^13.0.2",
         "socket.io-client": "^3.1.2",
         "start": "^5.1.0",
         "styled-components": "^5.2.1"
@@ -30,7 +31,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "test": "react-scripts test"
     },
     "browserslist": {
         "production": [
@@ -43,5 +45,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.16.0",
+        "babel-plugin-react-require": "^3.1.3"
     }
 }
