--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "eject": "react-scripts eject",
-        "test": "react-scripts test"
+        "test": "react-scripts test --env=jsdom --verbose=false --detectOpenHandles",
+        "coverage": "react-scripts test --env=jsdom --coverage CI=true"
     },
     "browserslist": {
         "production": [
