--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.16.0",
-        "babel-plugin-react-require": "^3.1.3"
+        "babel-plugin-react-require": "^3.1.3",
+        "jest-cli": "^27.4.4"
     }
 }
