--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.16.0",
         "babel-plugin-react-require": "^3.1.3",
-        "jest-cli": "^27.4.4"
+        "jest-cli": "^27.4.4",
+        "react-test-renderer": "^17.0.2"
     }
 }
