--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/react-fontawesome": "^0.1.14",
         "@material-ui/core": "^4.11.3",
         "@testing-library/react": "^12.1.2",
+        "@types/react-test-renderer": "^17.0.1",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
         "coverage": "^0.4.1",
@@ -17,7 +18,7 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^5.0.0",
+        "react-scripts": "^3.0.1",
         "react-toastify": "^7.0.4",
         "reactstrap": "^8.9.0",
         "redux": "^4.0.5",
