--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.0.1",
+        "react-scripts": "^5.0.0",
         "react-toastify": "^7.0.4",
         "reactstrap": "^8.9.0",
         "redux": "^4.0.5",
@@ -34,7 +34,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "test": "react-scripts test --env=jsdom --verbose=false --detectOpenHandles--env=jsdom --verbose=false --detectOpenHandles",
-        "cov": "react-scripts test --env=jsdom --coverage --watchAll --runInBand --detectOpenHandles"
+        "coverage": "react-scripts test --env=jsdom --coverage --watchAll --runInBand --detectOpenHandles"
     },
     "browserslist": {
         "production": [
